Applying updates from 9-21 (#8)
* Applying updates from 9-21

* adding missing files
